--- a/index.html
+++ b/index.html
@@ -35,11 +35,21 @@
         background: url(logo.svg) no-repeat center center;
       }
 
+      .top-right {
+        position: fixed;
+        top: 50px;
+        right: 50px;
+        color: #bbb;
+        font-size: 15px;
+        text-decoration: none;
+      }
+
     </style>
   </head>
   <body>
     <div class="container">
-      <a class="logo" href="http://liujin.logdown.com"></a>
+      <a class="logo" href="http://liujin.me/blog"></a>
     </div>
+    <a class="top-right" href="http://liujin.logdown.com">> 老博客</a>
   </body>
 </html>
