--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>Jin Liu</title>
+    <link rel="shorticon icon" href="/favicon.ico">
     <style>
       html {
         height: 100%;
