--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <a href="http://liujin.logdown.com">老博客</a>
       </p>
     </footer>
-    <a class="top-right" href="http://liujin.me/blog">博客</a>
+    <a class="top-right" href="http://coolzilj.github.io/blog">博客</a>
 
     <script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="./particlify.js" type="text/javascript"></script>
